--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ google-auth-httplib2
 google-auth-oauthlib
 gunicorn
 httpx
-langcodes[data]
+langcodes
 lxml
 motor
 mutagen
@@ -32,13 +32,11 @@ pycountry
 python-dotenv
 pyshorteners
 python-magic
-quoters
 qbittorrent-api
 requests
 speedtest-cli
 telegraph
 tenacity
-tgcrypto
 uv
 uvloop
 xattr
